--- a/views/adds/link_adds.ejs
+++ b/views/adds/link_adds.ejs
@@ -130,6 +130,12 @@
                           <option value="Category_Bottom_Right">
                             Category_Bottom_Right
                           </option>
+                          <option value="NewsLetter_Top">
+                            NewsLetter_Top
+                          </option>
+                          <option value="NewsLetter_Side">
+                            NewsLetter_Side
+                          </option>
                         </select>
                       </div>
                     </div>
