--- a/views/adds/add_adds.ejs
+++ b/views/adds/add_adds.ejs
@@ -63,6 +63,13 @@
                                     </div>
 
                                     <div class="form-group">
+                                        <label class="col-md-3 control-label">Google ID <span style="color:red;">*</span></label>
+                                        <div class="col-md-6">
+                                            <input type="text" class="form-control" name="googleId" id="googleId" placeholder="Enter Google ID">
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
                                         <label class="col-md-3 control-label">Image</label>
                                         <div class="col-md-6">
                                             <div class="custom-file-upload">
